3.0.0
=====
m d, yyyy
- Gwen 3 release
  - Refactor and migrate codebase to Scala 3
  - Update Gherkin parser and all dependencies
  - Settings changes:
    - Support *.conf (HOCON), and *.json settings files in addition to *.properties files
    - Renamed settings:
      - `gwen.feature.failfast` renamed to `gwen.feature.failfast.enabled`
      - `gwen.rp.heartbeat` renamed to `gwen.rp.heartbeat.enabled`
    - Changed settings defaults:
      - `gwen.associative.meta = true` instead of `false`
      - `gwen.behavior.rules = strict` instead of `lenient`
      - `gwen.feature.mode = declarative` instead of `imperative`
      - `gwen.report.suppress.meta = true` instead of `false`
      - `gwen.auto.discover.data.csv = false` instead of `true`
    - Removed settings alias
      - `gwen.behaviour.rules` in favor of `gwen.behavior.rules`
    - New settings
      - Configurable base and output directories
        - `gwen.baseDir` (default = .)
        - `gwen.outDir` (default = ${gwen.baseDir}/output)
      - Configurable CLI options:
        - `gwen.cli.options.parallel`
        - `gwen.cli.options.parallelFeatures`
        - `gwen.cli.options.batch`
        - `gwen.cli.options.dryRun`
        - `gwen.cli.options.report`
        - `gwen.cli.options.format`
        - `gwen.cli.options.tags`
        - `gwen.cli.options.inputData`
        - `gwen.cli.options.meta`
        - `gwen.cli.options.features`
  - CLI changes:
    - New command
      - `init` for initialising a new Gwen working directory
    - New options
      - `-c|--conf` for loading .conf, .json and .properties settings files
      - `-f|--format none` for no report generation
    - Deprecated option
      -  `-p|--properties` in favor of `-c|--conf`
    - Configurable defaults for all CLI options
    - Generate HTML reports by default
  - Add alternative DSL for attaching files to report (without quotes around name)
    - `I attach "<filepath>" as <name>`
  - New user documentation