@@ -65,6 +65,7 @@ gwen {
         # "~@tag2",
         # ..
       ]
+      verbose = false
     }
   }
   console {
