@@ -14,13 +14,13 @@
 ## limitations under the License.
 ##
 
-# Set root logger level to OFF
-log4j.rootLogger=OFF,STDOUT
+# Set root logger level to INFO
+log4j.rootLogger=INFO,STDOUT
 
 # STDOUT is set to be a ConsoleAppender.
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%p - %m%n
 
-# Set Gwen logger level to ERROR
-log4j.logger.gwen=ERROR
+# Set Gwen logger level to INFO
+log4j.logger.gwen=INFO
