@@ -35,6 +35,7 @@ class CLISettingsTest extends BaseTest with Matchers {
       CLISettings.`gwen.cli.options.parallelFeatures` should be (false)
       CLISettings.`gwen.cli.options.report`.map(_.getPath) should be (Some("output/reports"))
       CLISettings.`gwen.cli.options.tags` should be (Nil)
+      CLISettings.`gwen.cli.options.verbose` should be (false)
     }
   }
 
